@@ -15,6 +15,9 @@ Broker:
   clients that connect without a username.
 - Fix subscriptions being deleted when clients subscribed to a topic beginning
   with a $ but that is not $SYS.
+- When a durable client reconnects, its queued messages are now checked
+  against ACLs in case of a change in username/ACL state since it last
+  connected.
 - Anonymous clients are no longer accidently disconnected from the broker
   after a SIGHUP.
 
